--- a/template/package.json
+++ b/template/package.json
@@ -5,7 +5,7 @@
   "author": "{{ author }}",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --open http://localhost:9999",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     {{#if_eq runner "jest"}}
     "unit": "jest --config test/unit/jest.conf.js --coverage",
@@ -28,9 +28,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue": "^2.5.2"{{#router}},
+    "vue": "^2.5.2",
     "vue-i18n": "^7.6.0",
-    "vue-router": "^3.0.1"{{/router}},
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
