--- a/template/package.json
+++ b/template/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "le-cmpt": "^1.0.0",
     "vue": "^2.5.2",
     "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1",
